# rust-gpu-test-2

./: .gitignore  AGENTS.md  BINDLESS_IMPLEMENTATION.md  Cargo.toml  GRAPHICS_IMPLEMENTATION.md  GRAPHICS_QUICK_REFERENCE.md  README.md  build.rs  rust-toolchain.toml  test-all.sh
.github/workflows/: cpu.yml  cuda.yml  native-gpu.yml
compute-shader/: Cargo.toml
compute-shader/src/: lib.rs
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: lib.rs
operators/: Cargo.toml
ops/: Cargo.toml
ops/src/: lib.rs  mult.rs
shaders/: Cargo.toml
shaders/src/: bindless.rs  lib.rs  p2g.rs  svd.rs  util.rs
shaders/src/render/: grid_density.rs  grid_lines.rs  mod.rs  particles.rs
shared/: Cargo.toml
shared/src/: grid.rs  lib.rs  mpm_utils.rs  particles.rs
sparkler_builder/: Cargo.toml
sparkler_builder/src/: main.rs
sparkler_gen_graph_sketch/: Cargo.toml  build.rs
sparkler_gen_graph_sketch/src/: lib.rs  main.rs
sparkler_gen_graph_sketch/src/runners/: mod.rs
sparkler_gen_kernels_sketch/: Cargo.toml
sparkler_gen_kernels_sketch/src/: lib.rs
sparkler_macros/: Cargo.toml  README.md
sparkler_macros/src/: lib.rs
sparkler_macros/src/tests/: test_simple.rs
src/: error.rs  lib.rs  main.rs
src/graphics/: README.md  device.rs  error.rs  mod.rs  pipeline.rs  renderer.rs
src/runners/: ash.rs  cpu.rs  mod.rs  vulkano.rs  vulkano_2.rs  vulkano_bindless.rs  vulkano_compute_chain.rs  vulkano_tutorial.rs  wgpu.rs
src/runners/vulkano/: buffer.rs  buffer_specs.rs  descriptor_sets.rs  device.rs  dispatch.rs  mod.rs  pipeline.rs  shader.rs  shader_buffer_mapping.rs  shader_pipeline_builder.rs  typed_subbuffer_by_name.rs
src/runners/vulkano_bindless/: device.rs  dispatch.rs  pipeline.rs  shader.rs  shader_buffer_mapping.rs  unified_buffer.rs
tests/: README.md  compute_pass.rs  compute_pass_bindless.rs
