[workspace]
resolver = "2"
members = ["shared", "shaders"]

[package]
name = "rust-gpu-chimera-demo"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = ["vulkan", "vulkano"]
vulkan = ["spirv-builder"]
vulkano = ["vulkan", "dep:vulkano"]

[dependencies]
# Shared dependencies
shared = { path = "shared" }

glam = { version = "0.24", features = ["bytemuck"] }
bytemuck = { version = "1.14" }
num_cpus = "1.16"
parking_lot = "0.12"
rayon = "1.8"
rand = "0.8"
smallvec = "1.15.1"
facet = "0.29.1"

# Vulkan dependencies (wgpu)
# wgpu = { version = "26.0", features = [
#   "spirv",
#   "vulkan-portability",
# ], optional = true }
pollster = { version = "0.3", optional = true }
futures = { version = "0.3", optional = true }

# Vulkan dependencies (ash)
# ash = { version = "0.38", optional = true }
# ash-window = { version = "0.12", optional = true }
# raw-window-handle = { version = "0.6", optional = true }

# Vulkan dependencies (vulkano)
vulkano = { version = "0.35.2", optional = true }


winit = "0.30.12"


# Error handling
thiserror = "1.0"
anyhow = "1.0"


[build-dependencies]
spirv-builder = { git = "https://github.com/rust-gpu/rust-gpu", branch = "main", optional = true }


[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
  'cfg(target_arch, values("spirv"))',
] }
