[workspace]
resolver = "2"
members = ["shared", "shaders"]

[package]
name = "rust-gpu-chimera-demo"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = ["vulkan", "vulkano"]
vulkan = ["spirv-builder"]
vulkano = ["vulkan", "dep:vulkano"]

[workspace.dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
glam = { version = "0.30.8", default-features = false, features = [
  "bytemuck",
  "nostd-libm",
] }
spirv-std = { git = "https://github.com/rust-gpu/rust-gpu", branch = "main", features = [
  "bytemuck",
] }


[dependencies]

bytemuck = { workspace = true }
glam = { workspace = true }
spirv-std = { workspace = true }
# Shared dependencies
shared = { path = "shared" }


# glam = { version = "0.30.8", features = ["bytemuck"] }
# bytemuck = { version = "1.14" }
num_cpus = "1.16"
parking_lot = "0.12"
rayon = "1.8"
rand = "0.8"

variadics_please = "1.1.0"

pollster = { version = "0.3", optional = true }
futures = { version = "0.3", optional = true }


# Vulkan dependencies (vulkano)
vulkano = { version = "0.35.2", optional = true }


winit = "0.30.12"


# Error handling
thiserror = "1.0"
anyhow = "1.0"


[build-dependencies]
spirv-builder = { git = "https://github.com/rust-gpu/rust-gpu", branch = "main", optional = true }


[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
  'cfg(target_arch, values("spirv"))',
] }
