[package]
name = "compute-shader"
version = "0.0.0"
edition = "2021"
# publish = false
# authors.workspace = true
# edition.workspace = true
# license.workspace = true
# repository.workspace = true

[lints]
workspace = true

[lib]
# crate-type = ["dylib", "lib"]
crate-type = ["cdylib", "rlib"]


[dependencies]
## To depend on a crate that lives inside a Git workspace, you only need the git URL (and
## optionally branch/rev/tag). Cargo will clone the repo and then pick the crate named
## `spirv-std` from that workspace automatically. You must NOT combine `git` and `path`.
spirv-std = { git = "https://github.com/rust-gpu/rust-gpu", branch = "main" }

[build-dependencies]
spirv-builder = { git = "https://github.com/rust-gpu/rust-gpu", branch = "main" }

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
rayon = "1.5"
