[package]
name = "ops"
version = "0.0.0"
edition = "2021"
# publish = false
# authors.workspace = true
# edition.workspace = true
# license.workspace = true
# repository.workspace = true

[lints]
workspace = true

[lib]
# crate-type = ["dylib", "lib"]
crate-type = ["cdylib", "rlib"]


[dependencies]
sparkler = { path = "../sparkler" }
shared = { path = "../shared" }

spirv-std = { git = "https://github.com/rust-gpu/rust-gpu", branch = "main" }

quote = { version = "1" }
proc-macro2 = "1"


[build-dependencies]
spirv-builder = { git = "https://github.com/rust-gpu/rust-gpu", branch = "main" }

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
rayon = "1.5"
