[package]
name = "shaders"
version = "0.0.0"
edition = "2021"

[lints]
workspace = true

[lib]
# crate-type = ["dylib", "lib"]
crate-type = ["cdylib", "rlib"]


[dependencies]
bytemuck = { workspace = true }
# glam = { workspace = true }
spirv-std = { workspace = true }

shared = { path = "../shared" }


[build-dependencies]
spirv-builder = { git = "https://github.com/rust-gpu/rust-gpu", branch = "main" }
